--- a/web/index.html
+++ b/web/index.html
@@ -13,11 +13,12 @@
   <div id="root">
     <div class="container">
       <ul class="fileList">
-        <li class="item">a</li>
-        <li class="item">b</li>
-        <li class="item">c</li>
-        <li class="item">d</li>
-        <li class="item">e</li>
+        文件
+      </ul>
+    </div>
+    <div class="container">
+      <ul class="numList">
+        详情
       </ul>
     </div>
   </div>
